--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
 {% block style %}{% endblock %}
 <body>
 <div class='container header'>
-    <img src='{{url_for('static', filename='datchery.png')}}' />
+    <img src='/datchery/static/far_glyph_sm.png' />
     <h1>Summarization Demo</h1>
 </div>
 <div class='container content'>
